Started Edit Shelf implementation